project (nescore)

set (PROJECT_LIBRARY ${PROJECT_NAME})

set (PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

set (PROJECT_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include)

set (PROJECT_COMPILE_FEATURES cxx_std_17)

set (PROJECT_COMPILE_DEFINITIONS "-D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -D_FORTIFY_SOURCE=2")

file (
  GLOB_RECURSE
  NES_CORE_SOURCES
  CONFIGURE_DEPENDS
  ${PROJECT_SOURCE_DIR}/*.cc ${PROJECT_SOURCE_DIR}/*.h ${PROJECT_INCLUDE_PATH}/*.h)

add_subdirectory (src)

add_subdirectory (tests)
