project (nesdev_core)

set (NESDEV_CORE_LIBRARY ${PROJECT_NAME})

set (NESDEV_CORE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

set (NESDEV_CORE_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include)

set (NESDEV_CORE_COMPILE_FEATURES cxx_std_17)

set (NESDEV_CORE_COMPILE_DEFINITIONS "-D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -D_FORTIFY_SOURCE=2")

file (
  GLOB_RECURSE
  NESDEV_CORE_SOURCES
  CONFIGURE_DEPENDS
  ${NESDEV_CORE_SOURCE_DIR}/*.cc ${NESDEV_CORE_SOURCE_DIR}/*.h ${NESDEV_CORE_INCLUDE_PATH}/*.h)

add_subdirectory (src)

add_subdirectory (tests)
