file (GLOB NESDEV_CORE_TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)

set (NESDEV_CORE_TEST_INCLUDE_PATH ${NESDEV_CORE_SOURCE_DIR})

set (NESDEV_CORE_TEST_EXECUTER_NAME "RunAllUnitTests")

add_executable(
  ${NESDEV_CORE_TEST_EXECUTER_NAME}
  ${NESDEV_CORE_TEST_SOURCES}
  ${NESDEV_CORE_SOURCES})

target_compile_features (
  ${NESDEV_CORE_TEST_EXECUTER_NAME}
  PRIVATE
  ${NESDEV_CORE_COMPILE_FEATURES})

target_compile_definitions (
  ${NESDEV_CORE_TEST_EXECUTER_NAME}
  PRIVATE
  NESDEV_CORE_TESTS_PRIVATE
  ${NESDEV_CORE_COMPILE_DEFINITIONS})

target_include_directories(
  ${NESDEV_CORE_TEST_EXECUTER_NAME}
  PUBLIC
  ${GTEST_INCLUDE_PATH}
  ${GMOCK_INCLUDE_PATH}
  ${NESDEV_CORE_INCLUDE_PATH}
  ${NESDEV_CORE_TEST_INCLUDE_PATH})

target_link_libraries(
  ${NESDEV_CORE_TEST_EXECUTER_NAME}
  GTest::GTest
  GTest::GMock)

add_dependencies(
  ${NESDEV_CORE_TEST_EXECUTER_NAME}
  googletest)
